--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               </div>
               <div class="col-md-4">
                 <div class="language-experience">
-                  <h3 class="h5">Hausa  <small>Beginner</small></h3>
+                  <h3 class="h5">Spanish  <small>Beginner</small></h3>
                 </div>
               </div>
             </div>
