--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <p class="social-buttons"><a href="https://www.linkedin.com/in/daniel-felix-lawal-942121151/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Daniel Felix Lawal</a></p>
               </div>
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://dribbble.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-facebook"></i></span>Lawal Felix Wale</a></p>
+                <p class="social-buttons"><a href="https://web.facebook.com/lawal.felix" title=""><span class="social-round-icon fa-icon"><i class="fa fa-facebook"></i></span>Lawal Felix Wale</a></p>
               </div>
               <div class="col-md-3">
                 <p class="social-buttons"><a href="https://wa.me/+2348068127962" title=""><span class="social-round-icon fa-icon"><i class="fa fa-whatsapp"></i></span>I'Am Phelix_Hardaywale</a></p>
